# qr-scan

./: .env  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_create_users.sql  003_create_transactions.sql
backend/scripts/: seed.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/cache/: redis_client.rs
backend/src/handlers/: errors.rs  merchant.rs  mod.rs  payment.rs
backend/src/middleware/: jwt_auth.rs
backend/src/models/: merchant.rs  payment.rs
backend/src/services/: auth.rs  merchant.rs  mod.rs  payment.rs
backend/src/utils/: upi_client.rs
backend/tests/: integration_tests.rs
frontend/ios-app/: README.md
frontend/ios-app/QRPayment/: Info.plist  QRPaymentApp.swift
frontend/ios-app/QRPayment/Models/: Models.swift
frontend/ios-app/QRPayment/Services/: APIService.swift  QRScannerService.swift
frontend/ios-app/QRPayment/State/: AppState.swift
frontend/ios-app/QRPayment/Views/: HomeView.swift  LoginView.swift  PaymentSheet.swift  QRScanView.swift  RootView.swift
migrations/: 002_create_merchants.sql
src/: main.rs
src/cache/: redis_client.rs
src/db/: pool.rs
src/handlers/: auth.rs
src/models/: mod.rs  user.rs
src/services/: merchant.rs
src/utils/: circuit_breaker.rs  mod.rs
tests/: integration_tests.rs
